Updated deprecated URL to URI